dodane transitions przycisków

--- a/src/components/Main/style-bean.css
+++ b/src/components/Main/style-bean.css
@@ -266,7 +266,9 @@
   background: var(--second-color);
   transition-duration: 300ms;
 }
-
+.hoverable{
+  transition-duration: 300ms;
+}
 .hoverable:hover{
   transition-duration: 300ms;
   transform: scale(1.6);
