--- a/src/components/Main/_market.scss
+++ b/src/components/Main/_market.scss
@@ -1,14 +1,14 @@
-  
-  #market-wide-screen{
+#market-wide-screen{
     background-image: url(./images/tło6.png);
     grid-column: 3/4;
     grid-row: 1/3;
     border-radius: 10px;
     display: grid;
     grid-template-rows: 150px auto auto;
-  }
-  #market-wide-screen h1{
-    display: none;
+
+    h1{
+        display: none;
+      }
   }
   #search{
     grid-row: 1/2;
@@ -19,46 +19,38 @@
     grid-template-columns: 25% 25% 25% 25%;
     grid-template-rows: 27px 25px 36px 55px;
   }
-  #market-search-bar{
-    outline-style: none;
+
+  %market-button{
     font-family: 'Exo 2', sans-serif;
+    border: none;
+    padding: 0;
+    font-weight: bold;
+    border-radius: 5px;
     justify-self: center;
     align-self: center;
-    border: none;
-    border-radius: 5px;
-    background: var(--second-color);
+  }
+  #market-search-bar{
+    @extend %market-button;
+    outline-style: none;
+    background: $secondary-color;
     grid-column: 1/5;
     grid-row: 1/2;
     width: 88%;
     padding: 2px;
   }
   #market-reset-button{
-    font-family: 'Exo 2', sans-serif;
-    background-color: var(--first-color);
-    color: var(--second-color);
-    font-weight: bold;
-    padding: 0;
-    border: none;
-    border-radius: 5px;
-    justify-self: center;
-    align-self: center;
-    text-align: center;
+    @extend %market-button;
+    background-color: $primary-color;
+    color: $secondary-color;
     grid-column: 3/5;
     grid-row: 3/4;
     height: 30px;
     width: 81%;
   }
   .market-random-squad-button{
-    font-family: 'Exo 2', sans-serif;
-    background-color: var(--first-color);
-    color: var(--second-color);
-    font-weight: bold;
-    padding: 0;
-    border: none;
-    border-radius: 5px;
-    justify-self: center;
-    align-self: center;
-    text-align: center;
+    @extend %market-button;
+    background-color: $primary-color;
+    color: $secondary-color;
     grid-column: 1/3;
     grid-row: 3/4;
     height: 30px;
@@ -85,32 +77,22 @@
     z-index: 100;
   }
   .market-sort-button-active{
-    background-color: var(--first-color);
-    color: var(--second-color);
-    font-weight: bold;
-    font-family: 'Exo 2', sans-serif;
-    padding: 0;
+    @extend %market-button;
+    border-radius: 0;
+    background-color: $primary-color;
+    color: $secondary-color;
     margin: 0;
     height: 20px;
     width: 90%;
-    border: none;
-    text-align: center;
-    justify-self: center;
-    align-self: center;
   }
   .market-sort-button{
-    background-color: var(--second-color);
-    color: var(--first-color);
-    font-weight: bold;
-    font-family: 'Exo 2', sans-serif;
-    padding: 0;
+    @extend %market-button;
+    border-radius: 0;
+    background-color: $secondary-color;
+    color: $primary-color;
     margin: 0;
     height: 20px;
     width: 90%;
-    border: none;
-    text-align: center;
-    justify-self: center;
-    align-self: center;
   }
   #surname-descending-button{
     border-radius: 0 0 5px 5px;
@@ -135,7 +117,7 @@
     background: linear-gradient(to left bottom, rgb(255, 174, 0), rgb(216, 148, 0));
   }
   #def-filter-border-element{
-    background: linear-gradient(to left bottom, rgb(0, 255, 42), rgba(0, 167, 14));
+    background: linear-gradient(to left bottom, rgb(0, 255, 42), rgb(0, 167, 14));
   }
   #mid-filter-border-element{
     background: linear-gradient(to left bottom, rgb(38, 0, 255), rgb(0, 16, 107));
@@ -151,7 +133,6 @@
     height: 25px;
     width: 25px;
     border: none;
-    text-align: center;
     font-family: 'Exo 2', sans-serif;
     font-weight: bolder;
     font-size: 10px;
@@ -162,15 +143,15 @@
     background-color: none;
   }
   #def-filter-button{
-    color: rgba(0, 167, 14);
+    color: rgb(0, 167, 14);
     background-color: none;
   }
   #mid-filter-button{
-    color: rgba(0, 25, 167);
+    color: rgb(0, 25, 167);
     background-color: none;
   }
   #fwd-filter-button{
-    color: rgba(209, 3, 3);
+    color: rgb(209, 3, 3);
     background-color: none;
   }
 
@@ -184,16 +165,14 @@
     justify-content: space-around;
   }
   .page-toggle-button{
-    background-color: var(--second-color);
-    color: var(--first-color);
+    background-color: $secondary-color;
+    color: $primary-color;
     font-weight: bold;
     font-family: 'Exo 2', sans-serif;
     height: 30px;
     width: 20px;
     padding: 0;
-    /* margin: 0 2px 0 2px; */
     border-radius: 5px;
-    text-align: center;
     border: none
   }
   #market-list{
@@ -251,7 +230,7 @@
   }
   .position-marker-mid{
     grid-column: 1/2;
-    background-color: rgba(0, 25, 167);
+    background-color: rgb(0, 25, 167);
     width: 4px;
     align-self: center;
     justify-self: center;
@@ -283,8 +262,8 @@
   }
   .price-btn{
     font-family: 'Exo 2', sans-serif;
-    background-color: var(--first-color);
-    color: var(--second-color);
+    background-color: $primary-color;
+    color: $secondary-color;
     font-weight: bold;
     width: 38px;
     height: 25px;
@@ -304,7 +283,7 @@
     border: none;
     border-radius: 5px;
     grid-column: 3/4;
-    cursor:default;
+    cursor: default;
     justify-self: end;
     align-self: end;
     text-align: center;
@@ -364,15 +343,15 @@
   }
   .club-name-salernitana{
     color: white;
-    background-color: rgba(79, 18, 17);
+    background-color: rgb(79, 18, 17);
   }
   .club-name-sampdoria{
     color: white;
-    background-color: rgba(27, 84, 151);
+    background-color: rgb(27, 84, 151);
   }
   .club-name-sassuolo{
     color: black;
-    background-color: rgba(0, 167, 82);
+    background-color: rgb(0, 167, 82);
   }
   .club-name-spezia{
     color: black;
@@ -390,5 +369,3 @@
     color: rgb(235, 214, 149);
     background-color: black;
   }
-
-  
