--- a/src/components/Main/_schedule.scss
+++ b/src/components/Main/_schedule.scss
@@ -6,61 +6,56 @@
     grid-column: 1/2;
     grid-row: 1/3;
     border-radius: 10px;
+
+    h2{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        justify-self: center;
+        align-self: center;
+        margin: 0;
+    }
+    h3{
+        color: $secondary-color;
+        background-color: $primary-color;
+        border-radius: 5px 5px 0 0;
+        margin-top: 8px;
+    }
 }
 #schedule-matchday{
     display: grid;
     grid-template-columns: 18% 64% 18%;
     grid-template-rows: 60px;
 }
-#schedule-matchday h2{
-    grid-column: 2/3;
+
+%schedule-matchday-button{
     grid-row: 1/2;
-    justify-self: center;
+    background: none;
+    padding: 0;
+    border: none;
+    border-radius: 5px;
     align-self: center;
-    margin: 0;
+    text-align: center;
+
+    img{
+        height: 25px;
+        align-self: center;
+        justify-self: center;
+    }
 }
 #schedule-matchday-prev-button{
+    @extend %schedule-matchday-button;
     grid-column: 1/2;
-    grid-row: 1/2;
-    background: none;
-    padding: 0;
-    border: none;
-    border-radius: 5px;
     justify-self: right;
-    align-self: center;
-    text-align: center;
 }
 #schedule-matchday-next-button{
+    @extend %schedule-matchday-button;
     grid-column: 3/4;
-    grid-row: 1/2;
-    background: none;
-    padding: 0;
-    border: none;
-    border-radius: 5px;
     justify-self: left;
-    align-self: center;
-    text-align: center;
-}
-#schedule-matchday-next-button img{
-    height: 25px;
-    align-self: center;
-    justify-self: center;
-}
-#schedule-matchday-prev-button img{
-    height: 25px;
-    align-self: center;
-    justify-self: center;
-}
-#schedule-wide-screen h3{
-    background-color: var(--first-color);
-    border-radius: 5px 5px 0 0;
-    margin-top: 8px;
-    color: var(--second-color);
 }
 .schedule-match-list{
     list-style: none;
     border-radius: 5px;
-    background-color: var(--second-color);
+    background-color: $secondary-color;
     margin: 0;
     padding: 0 0 5px 0;
 }
