--- a/src/components/Main/_stats.scss
+++ b/src/components/Main/_stats.scss
@@ -4,14 +4,16 @@
     background-color: rgba(0, 0, 0, 0.596);
     backdrop-filter: blur(5px);
     z-index: 999;
-    position:fixed;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #stats-container{
     border-radius: 10px;
     background-color: $secondary-color;
     height: 530px;
     width: 650px;
-    margin: 3% auto 3% auto;
     display: grid;
     grid-template-columns: 25px 400px 200px 25px; 
     grid-template-rows: 61px 145px 300px;
