--- a/src/components/Main/style.scss
+++ b/src/components/Main/style.scss
@@ -66,7 +66,88 @@ button:disabled{
 #main-button3{
     grid-column: 4/5;
 }
+
+%formationButton{
+    font-family: 'Exo 2', sans-serif;
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+    border: none;
+    border-radius: 5px;
+    margin-left: 2px;
+    height: 30px;
+    width: 60px;
+    text-align: center;
+    justify-self: center;
+    align-self: center;
+}
+@keyframes slide-from-above {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translate(0px);
+        opacity: 1;
+    }
+}
+#teamdata-scrolled{
+    animation: slide-from-above 200ms ease;
+    position: sticky;
+    top: 10px;
+    background-image: url(./images/tło6.png);
+    width: 55px;
+    height: 270px;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    padding: 7px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+
+    #teamdata-save-button{
+        font-family: 'Exo 2', sans-serif;
+        background-color: var(--first-color);
+        color: var(--second-color);
+        font-weight: bold;
+        border: none;
+        border-radius: 5px !important;
+        height: 30px;
+        width: 60px;        
+        border-radius: 10px;
+        text-align: center;
+        justify-self: center;
+        align-self: center;
+    }
+    #teamdata-formations{
+        display: flex;
+        flex-direction: column;
+
+        .teamdata-formation-button{
+            @extend %formationButton;
+            margin: 2px 0;
+            background-color: $secondary-color;
+            color: $primary-color;
+        }
+        .teamdata-formation-button-clicked{
+            @extend %formationButton;
+            margin: 2px 0;
+            transition-duration: 300ms;
+            background-color: $primary-color;
+            color: $secondary-color;
+        }
+    }
+
+    h5,
+    #teamdata-balance-status,
+    #teamdata-teamname-container{
+        display: none;
+    }
+}
+
 #teamdata{
+    position: sticky;
+    top: 10px;
     background-image: url(./images/tło6.png);
     grid-column: 2/3;
     grid-row: 1/2;
@@ -135,20 +216,7 @@ button:disabled{
         grid-template-columns: auto auto auto auto auto auto auto;
         align-items: center;
     }
-    %formationButton{
-        font-family: 'Exo 2', sans-serif;
-        font-weight: bold;
-        padding: 0;
-        margin: 0;
-        border: none;
-        border-radius: 5px;
-        margin-left: 2px;
-        height: 30px;
-        width: 60px;
-        text-align: center;
-        justify-self: center;
-        align-self: center;
-    }
+    
     .teamdata-formation-button{
         @extend %formationButton;
         background-color: $secondary-color;
@@ -184,7 +252,6 @@ button:disabled{
 
 #pitch-img-container{
     grid-column: 1/2;
-    grid-row: 2/3;
     background-image: url(./images/stadium3.jpg);
     background-position-x: center;
     background-position-y: bottom;
