--- a/src/components/Main/_responsive1180.scss
+++ b/src/components/Main/_responsive1180.scss
@@ -108,6 +108,12 @@
     #market-list{
         grid-row: 3/4!important;
     }
+    #market-list-left{
+        grid-row: 3/4!important;
+      }
+    #market-list-right{
+        grid-row: 3/4!important;
+    }
     #page-toggle-bar-bottom{
         grid-row: 4/5!important;
     }
