--- a/src/components/Main/_market.scss
+++ b/src/components/Main/_market.scss
@@ -4,7 +4,7 @@
     grid-row: 1/3;
     border-radius: 10px;
     display: grid;
-    grid-template-rows: 150px auto auto;
+    grid-template-rows: 20% 70% 10%;
 
     h1{
         display: none;
@@ -163,18 +163,47 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-  }
-  .page-toggle-button{
-    background-color: $secondary-color;
-    color: $primary-color;
-    font-weight: bold;
-    font-family: 'Exo 2', sans-serif;
-    height: 30px;
-    width: 20px;
-    padding: 0;
-    border-radius: 5px;
-    border: none
-  }
+
+    
+    #page-toggle-slide{
+      background-color: inherit;
+      height: 26px;
+      -webkit-appearance: none;
+      margin: 10px 10px 13px 10px;
+      width: 100%;
+    }
+    #page-toggle-slide::-webkit-slider-thumb{
+      height: 20px;
+      width: 13px;
+      border-radius: 7px;
+      background: black;
+      cursor: pointer;
+      -webkit-appearance: none;
+      margin-top: -3.5px;
+    }
+    #page-toggle-slide::-webkit-slider-runnable-track{
+      width: 100%;
+      height: 13px;
+      cursor: pointer;
+      box-shadow: 0px 0px 0px #000000;
+      background: #ffffff;
+      border-radius: 25px;
+    }
+    .page-toggle-button{
+      background: none;
+      padding: 0;
+      border: none;
+      align-self: center;
+      text-align: center;
+
+      img{
+        height: 25px;
+        align-self: center;
+        justify-self: center;
+      }
+    }
+  }  
+
   @keyframes slide-left{
     0% {
       transform: translateX(0px);
@@ -210,7 +239,7 @@
   %market-list{
     grid-row: 2/3;
     padding-inline-start: 0;
-    margin-top: 0;
+    margin: 0;
     height: 100%;
     box-sizing: border-box;
     list-style: none;
