--- a/src/components/Main/_responsive1180.scss
+++ b/src/components/Main/_responsive1180.scss
@@ -91,7 +91,7 @@
         grid-row: 1/2;
         width: 100%;
         display: grid;
-        grid-template-rows: 90px 215px auto auto;
+        grid-template-rows: 10% 25% 55% 10%;
         background-color: rgba(255, 255, 255, 0.5);
         border-radius: 10px;
     }
