--- a/src/components/Main/styles/_player-bean.scss
+++ b/src/components/Main/styles/_player-bean.scss
@@ -16,44 +16,44 @@
   .player-bean-blank{
       color: white;
       opacity: .5;
-      background: url(./images/blank.jpg);
+      background: url(../images/blank.jpg);
   }
   
   .player-bean-atalanta{
       color: white;
-      background: url(./images/atalanta.jpg);
+      background: url(../images/atalanta.jpg);
     }
     .player-bean-bologna{
       color: white;
-      background: url(./images/bologna.jpg);
+      background: url(../images/bologna.jpg);
     }
     .player-bean-cagliari{
       color: white;
-      background: url(./images/cagliari.jpg);
+      background: url(../images/cagliari.jpg);
     }
     .player-bean-empoli{
       color: white;
-      background: url(./images/empoli.jpg);
+      background: url(../images/empoli.jpg);
     }
     .player-bean-fiorentina{
       color: white;
-      background: url(./images/fiorentina.jpg);
+      background: url(../images/fiorentina.jpg);
     }
     .player-bean-genoa{
       color: #FFD400;
-      background: url(./images/genoa.jpg);
+      background: url(../images/genoa.jpg);
     }
     .player-bean-hellas{
       color: #FFE74A;
-      background: url(./images/hellas.jpg);
+      background: url(../images/hellas.jpg);
     }
     .player-bean-inter{
       color: white;
-      background: url(./images/inter.jpg);
+      background: url(../images/inter.jpg);
     }
     .player-bean-juventus{
       color: white;
-      background: url(./images/juventus.jpg);
+      background: url(../images/juventus.jpg);
         
         .player-bean-surname{
             background-color: black;
@@ -61,28 +61,28 @@
     }
     .player-bean-lazio{
       color: black;
-      background: url(./images/lazio.jpg);
+      background: url(../images/lazio.jpg);
     }
     .player-bean-milan{
       color: white;
-      background: url(./images/milan.jpg);
+      background: url(../images/milan.jpg);
     }
     .player-bean-napoli{
       color: black;
-      background: url(./images/napoli.jpg);
+      background: url(../images/napoli.jpg);
     }
     .player-bean-roma{
       color: black;
-      background: url(./images/roma.jpg);
+      background: url(../images/roma.jpg);
       background-size: auto !important;
     }
     .player-bean-salernitana{
       color: white;
-      background: url(./images/salernitana.jpg);
+      background: url(../images/salernitana.jpg);
     }
     .player-bean-sampdoria{
       color: black;
-      background: url(./images/sampdoria.jpg);
+      background: url(../images/sampdoria.jpg);
 
       .player-bean-number{
         background-color: white;
@@ -94,7 +94,7 @@
 
     .player-bean-sassuolo{
       color: white;
-      background: url(./images/sassuolo.jpg);
+      background: url(../images/sassuolo.jpg);
     }
     .player-bean-spezia{
       color: black;
@@ -102,7 +102,7 @@
     }
     .player-bean-torino{
       color: white;
-      background: url(./images/torino.jpg);
+      background: url(../images/torino.jpg);
     }
     .player-bean-udinese{
       color: white;
