--- a/src/components/Main/styles/_market.scss
+++ b/src/components/Main/styles/_market.scss
@@ -1,5 +1,5 @@
 #market-wide-screen{
-    background-image: url(./images/tło6.png);
+    background-image: url(../images/tło6.png);
     grid-column: 3/4;
     grid-row: 1/3;
     border-radius: 10px;
