--- a/src/components/Main/styles/_schedule.scss
+++ b/src/components/Main/styles/_schedule.scss
@@ -2,7 +2,7 @@
     text-align: center;
     padding: 0 10px 0 10px;
     height: 720px;
-    background-image: url(./images/tło6.png);
+    background-image: url(../images/tło6.png);
     grid-column: 1/2;
     grid-row: 1/3;
     border-radius: 10px;
