refactoring - theSquad as object, cleaning

--- a/src/components/Main/styles/_player-bean.scss
+++ b/src/components/Main/styles/_player-bean.scss
@@ -39,7 +39,7 @@
       color: white;
       background: url(../images/fiorentina.jpg);
     }
-    .player-bean-ge{
+    .player-bean-gen{
       color: #FFD400;
       background: url(../images/genoa.jpg);
     }
