--- a/src/components/Main/styles/style.css
+++ b/src/components/Main/styles/style.css
@@ -290,7 +290,7 @@
   background: url(../images/fiorentina.jpg);
 }
 
-.player-bean-ge {
+.player-bean-gen {
   color: #FFD400;
   background: url(../images/genoa.jpg);
 }
