--- a/src/components/Main/styles/_market.scss
+++ b/src/components/Main/styles/_market.scss
@@ -255,7 +255,7 @@
   .price-label{
     grid-column: 4/5;
   }
-  .position-marker-gk{
+  .position-marker-g{
     grid-column: 1/2;
     background-color: rgb(219, 144, 3);
     width: 4px;
@@ -264,7 +264,7 @@
     height: 70%;
     transition-duration: 300ms;
   }
-  .position-marker-def{
+  .position-marker-d{
     grid-column: 1/2;
     background-color: rgb(17, 204, 0);
     width: 4px;
@@ -273,7 +273,7 @@
     height: 70%;
     transition-duration: 300ms;
   }
-  .position-marker-mid{
+  .position-marker-m{
     grid-column: 1/2;
     background-color: rgb(0, 25, 167);
     width: 4px;
@@ -282,7 +282,7 @@
     height: 70%;
     transition-duration: 300ms;
   }
-  .position-marker-fwd{
+  .position-marker-f{
     grid-column: 1/2;
     background-color: rgb(253, 1, 1);
     width: 4px;
@@ -291,10 +291,10 @@
     height: 70%;
     transition-duration: 300ms;
   }
-  .market-player:hover .position-marker-gk,
-  .market-player:hover .position-marker-def,
-  .market-player:hover .position-marker-mid,
-  .market-player:hover .position-marker-fwd{
+  .market-player:hover .position-marker-g,
+  .market-player:hover .position-marker-d,
+  .market-player:hover .position-marker-m,
+  .market-player:hover .position-marker-f{
     height: 130%;
     transition-duration: 300ms;
   }
