--- a/src/components/Main/styles/_schedule.scss
+++ b/src/components/Main/styles/_schedule.scss
@@ -51,6 +51,11 @@
     grid-column: 3/4;
     justify-self: left;
 }
+.matchdays-list{
+    list-style: none;
+    margin: 0;
+    padding: 5px;
+}
 .schedule-match-list{
     list-style: none;
     border-radius: 5px;
