--- a/src/components/Main/styles/style.css
+++ b/src/components/Main/styles/style.css
@@ -548,6 +548,12 @@
   justify-self: left;
 }
 
+.matchdays-list {
+  list-style: none;
+  margin: 0;
+  padding: 5px;
+}
+
 .schedule-match-list {
   list-style: none;
   border-radius: 5px;
